--- a/c2c_sim/notebooks/core/simulate.ipynb
+++ b/c2c_sim/notebooks/core/simulate.ipynb
@@ -21,7 +21,7 @@
     "import pickle\n",
     "\n",
     "import uuid\n",
-    "from faker import Faker\n",
+    "# from faker import Faker\n",
     "import random\n",
     "from tqdm import tqdm\n",
     "from tqdm import trange\n",
@@ -233,7 +233,7 @@
     "            if self.seed is not None:\n",
     "                self._cell_ids = seed_random_ids(n_cells, 1e9/4, 1e9/2, self.seed)\n",
     "            else:\n",
-    "                self._cell_ids = [str(uuid.uuid4()).split('-')[-1] for i in range(len(n_cells))]            \n",
+    "                self._cell_ids = [str(uuid.uuid4()).split('-')[-1] for i in range((n_cells))]            \n",
     "                \n",
     "            if directional:\n",
     "                self.cell_interactions = list(itertools.permutations(self._cell_ids, 2))\n",
@@ -459,10 +459,10 @@
     "            \n",
     "            for k in set(['edges']).difference(params.keys()):\n",
     "                params[k] = None\n",
-    "            else:\n",
-    "                B, node_groups, fit, comp = gg.bipartite_sf(nodes = params['nodes'], degrees = params['degrees'], \n",
-    "                                                        alpha = params['alpha'], edges = params['edges'], \n",
-    "                                                           seed = self.seed)  \n",
+    "#             else:\n",
+    "            B, node_groups, fit, comp = gg.bipartite_sf(nodes = params['nodes'], degrees = params['degrees'], \n",
+    "                                                    alpha = params['alpha'], edges = params['edges'], \n",
+    "                                                       seed = self.seed)  \n",
     "            B = B['nx']\n",
     "            params['n_ligands'] = params['nodes'] # same no. of ligands and receptors\n",
     "        elif network_type == 'normal':\n",
@@ -709,7 +709,7 @@
     "            if self.seed is not None:\n",
     "                seeds = generate_seeds(len(c_labels)*self.clrm.index.shape[0]*3, 1e8, 1e9/4, self.seed)\n",
     "            else: \n",
-    "                seeds = [None]*len(c_labels)*3\n",
+    "                seeds = [None]*len(c_labels)*self.clrm.index.shape[0]*3\n",
     "            \n",
     "            seed_idx = 0\n",
     "            for cond in c_labels:\n",
