--- a/explore/metadata_skew_dist.ipynb
+++ b/explore/metadata_skew_dist.ipynb
@@ -15,7 +15,7 @@
     "import sys\n",
     "sys.path.insert(1, '../c2c_sim/')\n",
     "from core.simulate import CCI_MD\n",
-    "\n",
+    "seed = 1\n",
     "dp = '/data2/hratch/cci_dt/figures/'"
    ]
   },
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# initialize\n",
-    "cci = CCI_MD()\n",
+    "cci = CCI_MD(seed = seed)\n",
     "cci.cci_network(n_cells = 1000, directional = True, autocrine = True)"
    ]
   },
