--- a/explore/noise_v_errorp1.ipynb
+++ b/explore/noise_v_errorp1.ipynb
@@ -73,17 +73,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(data_path + 'sim_obj_v' + str(version) + '.pickle', 'rb') as f:\n",
-    "    sim_0 = pickle.load(f) # from sim_tensor_decompose_vis script\n",
+    "# with open(data_path + 'sim_obj_v' + str(version) + '.pickle', 'rb') as f:\n",
+    "#     sim_0 = pickle.load(f) # from sim_tensor_decompose_vis script\n",
     "\n",
-    "fn_0 = data_path + 'error_vs_noise_' + str(version) + '_noise0_001.tab' # save results here\n",
-    "fn_1 = data_path + 'error_vs_noise_' + str(version) + '_noise0_01.tab' # save results here\n",
-    "fn_2 = data_path + 'error_vs_noise_' + str(version) + '_noise0_05.tab' # save results here\n",
-    "fn_3 = data_path + 'error_vs_noise_' + str(version) + '_noise0_10.tab' # save results here\n",
-    "fn_4 = data_path + 'error_vs_noise_' + str(version) + '_noise0_15.tab' # save results here\n",
-    "fn_5 = data_path + 'error_vs_noise_' + str(version) + '_noise0_20.tab' # save results here\n",
-    "fn_6 = data_path + 'error_vs_noise_' + str(version) + '_noise0_25.tab' # save results here\n",
-    "fns = [fn_0,fn_1,fn_2,fn_3, fn_4, fn_5, fn_6]\n",
+    "fns = [data_path + 'error_vs_noise_' + str(version) + '_noise0_' + '{:.2f}'.format(nm).split('.')[1] + '.tab'  \\\n",
+    "       if nm > 0.01 else data_path + 'error_vs_noise_' + str(version) + '_noise0_' + \\\n",
+    "       '{:.3f}'.format(nm).split('.')[1] + '.tab'for nm in nm_vals]\n",
     "\n",
     "for fn in fns:\n",
     "    if not os.path.isfile(fn):\n",
@@ -104,16 +99,8 @@
     "        warnings.simplefilter(\"ignore\")\n",
     "        with HiddenPrints(): #ignore prints of imported functions\n",
     "            try:\n",
-    "                #-------new patterns/simulations\n",
-    "#                 sim_0 = pickle.load(sim)\n",
-    "                \n",
-    "#                 sim = Simulate()\n",
-    "#                 sim.LR = copy.deepcopy(sim_0.LR)\n",
-    "#                 sim.cci = copy.deepcopy(sim_0.cci)\n",
-    "#                 sim.clrm = ...\n",
-    "                \n",
-    "#                 sim.generate_tensor(noise = noise, binary = False, bulk = True, noise_max = noise_max)\n",
-    "                \n",
+    "                #-------new patterns/simulations - not seeded\n",
+    "\n",
     "                sim = Simulate() \n",
     "                # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
     "                sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
@@ -161,10 +148,10 @@
    "source": [
     "counter = 0\n",
     "for nm in [0.001, 0.01, 0.05, 0.1, 0.15, 0.20, 0.25]:\n",
-    "    print('Cap background noise at {:.2f}'.format(nm))\n",
+    "    print('Cap background noise at {:.3f}'.format(nm))\n",
     "    for noise in list(np.arange(0.01,0.1, 0.01)) + list(np.arange(0.1,1.01,0.1)):\n",
     "        print('------------------------------------------')\n",
-    "        print('Noise: {:.2f}'.format(noise))\n",
+    "        print('Noise: {:.3f}'.format(noise))\n",
     "\n",
     "        if par:\n",
     "            pool = multiprocessing.Pool(processes = n_cores)\n",
@@ -178,7 +165,7 @@
     "                raise ValueError('Parallelization failed at noise: {:.2f}'.format(noise))\n",
     "        else:\n",
     "            for i in trange(n_iter):\n",
-    "                get_error(noise, nm, fn[counter])\n",
+    "                get_error(noise, nm, fns[counter])\n",
     "    counter += 1\n",
     "print('Complete')"
    ]
