finalize environment setup for cellchat

--- a/cellchat_for_tensor/cellchat_context.ipynb
+++ b/cellchat_for_tensor/cellchat_context.ipynb
@@ -16,13 +16,28 @@
     "    library(psych)\n",
     "})\n",
     "options(stringsAsFactors = FALSE)\n",
-    "input_data_path = '/data2/hratch/immune_CCI/covid_data/'\n",
-    "output_results_path = '/data2/hratch/immune_CCI/covid_results/'"
+    "expression_data_path = '/data2/eric/CCC-Benchmark/data/External/'#'/data2/hratch/immune_CCI/covid/expression_data/'\n",
+    "output_results_path = '/data2/hratch/immune_CCI/covid/results/'\n",
+    "input_data_path = '/data2/hratch/immune_CCI/covid/inputs/'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "needed-township",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter for just the LR pairs used by Tensor cell2cell\n",
+    "lr_pairs<-read.csv(paste0(input_data_path,'Tensor-cell2cell-LRpairs.csv'))\n",
+    "lr_pairs<-lr_pairs$interaction_name\n",
+    "humandb<-CellChatDB.human\n",
+    "humandb$interaction<-CellChatDB.human$interaction[CellChatDB.human$interaction$interaction_name %in% lr_pairs, ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "unable-motivation",
    "metadata": {},
    "outputs": [],
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "backed-female",
    "metadata": {},
    "outputs": [],
@@ -97,10 +112,10 @@
     "                              trim = NULL, seed = NULL){\n",
     "    \n",
     "    # loop through each context and create a cell type future\n",
-    "    cellchat <- createCellChat(object = data.input, meta = meta, group.by = 'celltype')\n",
+    "    cellchat <- createCellChat(object = data.input, meta = meta, group.by = 'cell_type')\n",
     "    \n",
     "    if (organism == 'human'){\n",
-    "        cellchat@DB <- CellChatDB.human # human organism\n",
+    "        cellchat@DB <- humandb # human organism\n",
     "    }else{stop('Only human organism considered currently')}\n",
     "    # parallelization\n",
     "    if (!(is.null(n.cores)) | (!n.cores<=1)){\n",
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "id": "available-desperate",
    "metadata": {},
    "outputs": [],
@@ -191,19 +206,19 @@
     "# if by sample, will create a separate cellchat object for each sample, otherwise, will first merge by \n",
     "# the condition, and create a separate cellchat object for each condition\n",
     "by.sample<-FALSE \n",
-    "if (by.sample){seed<-18}else{seed<-20}"
+    "if (by.sample){seed<-24}else{seed<-25}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "precious-combination",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load input data\n",
     "fns = list()\n",
-    "for (fn in list.files(input_data_path)){\n",
+    "for (fn in list.files(expression_data_path)){\n",
     "    sn = strsplit(fn, '_')[[1]]\n",
     "    sample.name = sn[[2]]\n",
     "    type = sn[[1]]\n",
@@ -213,31 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "christian-harmony",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create cellchat object for each sample or context\n",
     "covid.list<-list()\n",
     "if (!by.sample){ # by context\n",
     "    # merge the metadata files\n",
     "    print('Read in metadata files')\n",
-    "    meta_all <- read.csv(paste0(input_data_path, fns[[1]]$Meta))\n",
+    "    meta_all <- read.csv(paste0(expression_data_path, fns[[1]]$Meta))\n",
     "    for (sample.name in names(fns)[2:length(fns)]){\n",
-    "        meta_ <- read.csv(paste0(input_data_path, fns[[sample.name]]$Meta))\n",
+    "        meta_ <- read.csv(paste0(expression_data_path, fns[[sample.name]]$Meta))\n",
     "        meta_all<-rbind(meta_all,meta_)\n",
     "    }\n",
     "    \n",
-    "    if (length(unique(meta_all$ID)) != dim(meta_all)[[1]]){\n",
+    "    if (length(unique(meta_all$Cell)) != dim(meta_all)[[1]]){\n",
     "        stop('Overlapping cell barcodes across samples')\n",
     "    }\n",
     "    \n",
@@ -262,7 +269,7 @@
     "    for (sample.name in names(fns)){\n",
     "        print(paste0(counter, ' of ', length(fns)))\n",
     "        context = context_map[[sample.name]]\n",
-    "        sample.data<-read.csv(paste0(input_data_path, fns[[sample.name]]$DGE))\n",
+    "        sample.data<-read.csv(paste0(expression_data_path, fns[[sample.name]]$DGE))\n",
     "        rownames(sample.data)<-sample.data$Gene\n",
     "        sample.data<-sample.data[ , !(colnames(sample.data) %in% c('Gene'))]\n",
     "        if (is.null(data_input_map[[context]])){ \n",
@@ -293,7 +300,7 @@
     "        colnames(data.input) = cell.names\n",
     "        rownames(data.input) = gene.names\n",
     "\n",
-    "        rownames(meta) = meta$ID\n",
+    "        rownames(meta) = meta$Cell\n",
     "        meta = meta[colnames(data.input), ] # order\n",
     "\n",
     "        # generate the cellchat object\n",
@@ -310,7 +317,7 @@
     "    for (sample.name in names(fns)){\n",
     "        print(paste0(counter, ' of ', length(fns)))\n",
     "        print('Read in data')\n",
-    "        data.input<-read.csv(paste0(input_data_path, fns[[sample.name]]$DGE))\n",
+    "        data.input<-read.csv(paste0(expression_data_path, fns[[sample.name]]$DGE))\n",
     "        rownames(data.input)<-data.input$Gene\n",
     "        data.input<-data.input[ , !(colnames(data.input) %in% c('Gene'))]\n",
     "        # # SUBSETTING, REMOVE\n",
@@ -323,10 +330,9 @@
     "        colnames(data.input) = cell.names\n",
     "        rownames(data.input) = gene.names\n",
     "\n",
-    "        meta = read.csv(paste0(input_data_path, fns[[sample.name]]$Meta))\n",
-    "        rownames(meta) = meta$ID\n",
+    "        meta = read.csv(paste0(expression_data_path, fns[[sample.name]]$Meta))\n",
+    "        rownames(meta) = meta$Cell\n",
     "        meta = meta[colnames(data.input), ] # order\n",
-    "        # meta<-meta[meta$ID %in% cell.names, ] # SUBSETTING, REMOVE \n",
     "\n",
     "        # generate the cellchat object\n",
     "        print('Generate cellchat object')\n",
@@ -352,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "sudden-commerce",
    "metadata": {},
    "outputs": [],
@@ -396,19 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "id": "frequent-excitement",
    "metadata": {},
    "outputs": [],
    "source": [
     "n.cores = 17\n",
-    "input_data_path = '/data2/hratch/immune_CCI/'\n",
     "fn = 'Enrichment_LR_Loadings.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "id": "white-unemployment",
    "metadata": {},
    "outputs": [],
@@ -419,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
    "id": "bottom-doctor",
    "metadata": {},
    "outputs": [],
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "extraordinary-armor",
    "metadata": {},
    "outputs": [],
@@ -455,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 141,
    "id": "vanilla-checklist",
    "metadata": {},
    "outputs": [],
@@ -489,13 +494,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 143,
    "id": "south-noise",
    "metadata": {},
    "outputs": [],
    "source": [
     "ora.res$overlapGenes<-vapply(ora.res$overlapGenes, paste, collapse = \", \", character(1L))\n",
-    "write.csv(ora.res, paste0(output_results_path, 'ora_cellchat.csv'))"
+    "write.csv(ora.res, paste0(output_results_path, 'ora_cellchat.csv'))\n",
+    "\n",
+    "for (col in c('overlapGenes', 'leadingEdge')){\n",
+    "    enrich.res[[col]]<-vapply(enrich.res[[col]], paste, collapse = \", \", character(1L))\n",
+    "}\n",
+    "write.csv(enrich.res, paste0(output_results_path, 'enrich_cellchat.csv'))"
    ]
   },
   {
@@ -509,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 149,
    "id": "realistic-alabama",
    "metadata": {},
    "outputs": [],
@@ -526,27 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "scientific-footage",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cellchat.res<-readRDS(paste0(output_results_path, 'cellchat_context_results_bycontext.rds')) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 150,
    "id": "straight-minnesota",
    "metadata": {},
    "outputs": [],
    "source": [
     " # n = 4 pathways to look at in cellchat, as this is the maximum number of pathwyas for a single \n",
     "# factor from tensor ORA\n",
-    "n_paths<-max(table(ora.res[(ora.res$padj < 0.1),'Factor']))\n",
+    "# n_paths<-max(table(ora.res[(ora.res$padj < 0.1),'Factor']))\n",
+    "n_paths<-15\n",
     "\n",
-    "jaccard.compare<-data.frame(matrix(ncol = 3, nrow = length(cellchat.res$pathway_distance)*length(unique(ora.res$Factor))))\n",
-    "colnames(jaccard.compare)<-c('CellChat.comparison', 'Tensor.Factor', 'Jaccard')\n",
+    "jaccard.compare.ora<-data.frame(matrix(ncol = 3, nrow = length(cellchat.res$pathway_distance)*length(unique(ora.res$Factor))))\n",
+    "colnames(jaccard.compare.ora)<-c('CellChat.comparison', 'Tensor.Factor', 'Jaccard')\n",
     "\n",
     "counter<-1\n",
     "for (comparison in names(cellchat.res$pathway_distance)){\n",
@@ -557,22 +558,45 @@
     "        tensor_paths<-ora.res[(ora.res$Factor == factor) & (ora.res$padj < 0.1),][['pathway']]\n",
     "        \n",
     "        js<-jaccard(cellchat_paths, tensor_paths)\n",
-    "        jaccard.compare[counter, ]<-c(comparison, factor, js)\n",
+    "        jaccard.compare.ora[counter, ]<-c(comparison, factor, js)\n",
     "        counter<-counter + 1\n",
     "        \n",
     "    }\n",
-    "}"
+    "}\n",
+    "write.csv(jaccard.compare.ora, paste0(output_results_path, 'jaccard_ora_cellchat_tc2c.csv'))\n",
+    "\n",
+    " # n = 4 pathways to look at in cellchat, as this is the maximum number of pathwyas for a single \n",
+    "# factor from tensor enrich\n",
+    "# n_paths<-max(table(enrich.res[(enrich.res$padj < 0.1),'Factor']))\n",
+    "n_paths<-15\n",
+    "\n",
+    "jaccard.compare.enrich<-data.frame(matrix(ncol = 3, nrow = length(cellchat.res$pathway_distance)*length(unique(enrich.res$Factor))))\n",
+    "colnames(jaccard.compare.enrich)<-c('CellChat.comparison', 'Tensor.Factor', 'Jaccard')\n",
+    "\n",
+    "counter<-1\n",
+    "for (comparison in names(cellchat.res$pathway_distance)){\n",
+    "    for (factor in unique(enrich.res$Factor)){\n",
+    "        pd<-cellchat.res$pathway_distance[[comparison]]\n",
+    "        cellchat_paths<-pd[with(pd, order(-dist)), 'name'][1:n_paths] # filter for top n = 4 pathways by distance\n",
+    "        \n",
+    "        tensor_paths<-enrich.res[(enrich.res$Factor == factor) & (enrich.res$padj < 0.1),][['pathway']]\n",
+    "        \n",
+    "        js<-jaccard(cellchat_paths, tensor_paths)\n",
+    "        jaccard.compare.enrich[counter, ]<-c(comparison, factor, js)\n",
+    "        counter<-counter + 1\n",
+    "        \n",
+    "    }\n",
+    "}\n",
+    "write.csv(jaccard.compare.enrich, paste0(output_results_path, 'jaccard_enrich_cellchat_tc2c.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 151,
    "id": "governing-entry",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "write.csv(jaccard.compare, paste0(output_results_path, 'jaccard_cellchat_tc2c.csv'))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -584,72 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
-   "id": "meaningful-earthquake",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre class=language-r><code>function (x, na.rm = TRUE) \n",
-       "{\n",
-       "<span style=white-space:pre-wrap>    if (is.null(nrow(x))) {</span>\n",
-       "<span style=white-space:pre-wrap>        exp(mean(log(x), na.rm = na.rm))</span>\n",
-       "<span style=white-space:pre-wrap>    }</span>\n",
-       "<span style=white-space:pre-wrap>    else {</span>\n",
-       "<span style=white-space:pre-wrap>        exp(apply(log(x), 2, mean, na.rm = na.rm))</span>\n",
-       "<span style=white-space:pre-wrap>    }</span>\n",
-       "}</code></pre>"
-      ],
-      "text/latex": [
-       "\\begin{minted}{r}\n",
-       "function (x, na.rm = TRUE) \n",
-       "\\{\n",
-       "    if (is.null(nrow(x))) \\{\n",
-       "        exp(mean(log(x), na.rm = na.rm))\n",
-       "    \\}\n",
-       "    else \\{\n",
-       "        exp(apply(log(x), 2, mean, na.rm = na.rm))\n",
-       "    \\}\n",
-       "\\}\n",
-       "\\end{minted}"
-      ],
-      "text/markdown": [
-       "```r\n",
-       "function (x, na.rm = TRUE) \n",
-       "{\n",
-       "    if (is.null(nrow(x))) {\n",
-       "        exp(mean(log(x), na.rm = na.rm))\n",
-       "    }\n",
-       "    else {\n",
-       "        exp(apply(log(x), 2, mean, na.rm = na.rm))\n",
-       "    }\n",
-       "}\n",
-       "```"
-      ],
-      "text/plain": [
-       "function (x, na.rm = TRUE) \n",
-       "{\n",
-       "    if (is.null(nrow(x))) {\n",
-       "        exp(mean(log(x), na.rm = na.rm))\n",
-       "    }\n",
-       "    else {\n",
-       "        exp(apply(log(x), 2, mean, na.rm = na.rm))\n",
-       "    }\n",
-       "}\n",
-       "<bytecode: 0x7fb308620338>\n",
-       "<environment: namespace:psych>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 127,
    "id": "monthly-clinic",
    "metadata": {},
    "outputs": [],
@@ -672,7 +631,7 @@
     "        corr.res[['Correlation.Type']]<-ct\n",
     "\n",
     "        # filter out signalling pathways with only 1 LR pair\n",
-    "        if (n_lr_pairs<-0){\n",
+    "        if (n_lr_pairs<0){\n",
     "            filter<-NULL\n",
     "        }else{\n",
     "            filter<-names(which(table(term_to_gene$Signalling.Pathway) == n_lr_pairs))\n",
@@ -682,8 +641,8 @@
     "        for (factor in colnames(loadings)){\n",
     "            # get geometric mean of loadings for each signalling pathway, within the factor\n",
     "            gms<-as.numeric(lapply(names(pathways), function(sp) psych::geometric.mean(loadings[pathways[[sp]], factor])))\n",
-    "\n",
-    "            if (!is.null(filter)){gms[filter]<-NA}\n",
+    "            gms[filter]<-NA\n",
+    "            \n",
     "\n",
     "            # get pairwise pearson correlation between geometric mean and pathway distance for each cellchat comparison\n",
     "            corr.res[[factor]]<-lapply(names(pds), function(pd) cor(cbind(gms, pds[[pd]][names(pathways), 'dist'], deparse.level = 0), \n",
@@ -696,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": null,
    "id": "vulnerable-mandate",
    "metadata": {},
    "outputs": [],
@@ -709,20 +668,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": null,
    "id": "greek-fraud",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"/data2/hratch/immune_CCI/covid_results/correlation_cellchat_tc2c.csv\"\n",
-      "[1] \"/data2/hratch/immune_CCI/covid_results/jaccard_cellchat_tc2c.csv\"\n",
-      "[1] \"/data2/hratch/immune_CCI/covid_results/ora_cellchat.csv\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (fn in c(paste0(output_results_path, 'correlation_cellchat_tc2c.csv'),\n",
     "paste0(output_results_path, 'jaccard_cellchat_tc2c.csv'),\n",
@@ -730,14 +679,6 @@
     "    print(fn)\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "invalid-basket",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
