--- a/cellchat_for_tensor/timing/preprocess.ipynb
+++ b/cellchat_for_tensor/timing/preprocess.ipynb
@@ -16,16 +16,10 @@
     "    library(psych)\n",
     "})\n",
     "options(stringsAsFactors = FALSE)\n",
-    "input_data_path = '/data2/hratch/immune_CCI/covid_data/'\n",
-    "output_results_path = '/data2/hratch/immune_CCI/covid_results/timing'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "controlling-multiple",
-   "metadata": {},
-   "source": [
-    "# cellchat on individual samples"
+    "expression_data_path = '/data2/eric/CCC-Benchmark/data/External/'#'/data2/hratch/immune_CCI/covid/expression_data/'\n",
+    "output_results_path = '/data2/hratch/immune_CCI/covid/results/timing/'\n",
+    "input_data_path = '/data2/hratch/immune_CCI/covid/inputs/'\n",
+    "\n"
    ]
   },
   {
@@ -35,6 +29,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filter for the LR pairs used by Tensor cell2cell\n",
+    "lr_pairs<-read.csv(paste0(input_data_path,'Tensor-cell2cell-LRpairs.csv'))\n",
+    "lr_pairs<-lr_pairs$interaction_name\n",
+    "humandb<-CellChatDB.human\n",
+    "humandb$interaction<-CellChatDB.human$interaction[CellChatDB.human$interaction$interaction_name %in% lr_pairs, ] \n",
+    "saveRDS(humandb, paste0(output_results_path, 'humandb.rds'))\n",
+    "\n",
     "by.sample<-FALSE "
    ]
   },
@@ -47,14 +48,12 @@
    "source": [
     "# load input data\n",
     "fns = list()\n",
-    "for (fn in list.files(input_data_path)){\n",
+    "for (fn in list.files(expression_data_path)){\n",
     "    sn = strsplit(fn, '_')[[1]]\n",
     "    sample.name = sn[[2]]\n",
     "    type = sn[[1]]\n",
     "    fns[[sample.name]][[type]] = fn\n",
-    "}\n",
-    "saveRDS(fns, paste0(output_results_path, 'fns.rds'))\n",
-    "\n"
+    "}"
    ]
   },
   {
@@ -76,13 +75,13 @@
     "if (!by.sample){ # by context\n",
     "    # merge the metadata files\n",
     "    print('Read in metadata files')\n",
-    "    meta_all <- read.csv(paste0(input_data_path, fns[[1]]$Meta))\n",
+    "    meta_all <- read.csv(paste0(expression_data_path, fns[[1]]$Meta))\n",
     "    for (sample.name in names(fns)[2:length(fns)]){\n",
-    "        meta_ <- read.csv(paste0(input_data_path, fns[[sample.name]]$Meta))\n",
+    "        meta_ <- read.csv(paste0(expression_data_path, fns[[sample.name]]$Meta))\n",
     "        meta_all<-rbind(meta_all,meta_)\n",
     "    }\n",
     "    \n",
-    "    if (length(unique(meta_all$ID)) != dim(meta_all)[[1]]){\n",
+    "    if (length(unique(meta_all$Cell)) != dim(meta_all)[[1]]){\n",
     "        stop('Overlapping cell barcodes across samples')\n",
     "    }\n",
     "    \n",
@@ -107,7 +106,7 @@
     "    for (sample.name in names(fns)){\n",
     "        print(paste0(counter, ' of ', length(fns)))\n",
     "        context = context_map[[sample.name]]\n",
-    "        sample.data<-read.csv(paste0(input_data_path, fns[[sample.name]]$DGE))\n",
+    "        sample.data<-read.csv(paste0(expression_data_path, fns[[sample.name]]$DGE))\n",
     "        rownames(sample.data)<-sample.data$Gene\n",
     "        sample.data<-sample.data[ , !(colnames(sample.data) %in% c('Gene'))]\n",
     "        if (is.null(data_input_map[[context]])){ \n",
@@ -138,7 +137,7 @@
     "        colnames(data.input) = cell.names\n",
     "        rownames(data.input) = gene.names\n",
     "\n",
-    "        rownames(meta) = meta$ID\n",
+    "        rownames(meta) = meta$Cell\n",
     "        meta = meta[colnames(data.input), ] # order\n",
     "        \n",
     "        data_input_map[[context]]<-data.input\n",
@@ -155,7 +154,7 @@
     "    for (sample.name in names(fns)){\n",
     "        print(paste0(counter, ' of ', length(fns)))\n",
     "        print('Read in data')\n",
-    "        data.input<-read.csv(paste0(input_data_path, fns[[sample.name]]$DGE))\n",
+    "        data.input<-read.csv(paste0(expression_data_path, fns[[sample.name]]$DGE))\n",
     "        rownames(data.input)<-data.input$Gene\n",
     "        data.input<-data.input[ , !(colnames(data.input) %in% c('Gene'))]\n",
     "     \n",
@@ -165,8 +164,8 @@
     "        colnames(data.input) = cell.names\n",
     "        rownames(data.input) = gene.names\n",
     "\n",
-    "        meta = read.csv(paste0(input_data_path, fns[[sample.name]]$Meta))\n",
-    "        rownames(meta) = meta$ID\n",
+    "        meta = read.csv(paste0(expression_data_path, fns[[sample.name]]$Meta))\n",
+    "        rownames(meta) = meta$Cell\n",
     "        meta = meta[colnames(data.input), ] # order\n",
     "        data_input_map[[sample.name]]<-data.input\n",
     "        meta_map[[sample.name]]<-meta\n",
