timing covid atlas

--- a/cellchat_for_tensor/timing/time_cellchat_bysample.ipynb
+++ b/cellchat_for_tensor/timing/time_cellchat_bysample.ipynb
@@ -117,6 +117,7 @@
     "covid.list<-list()\n",
     "for (sample.name in names(meta_map)){\n",
     "    # loop through each sample.name and create a cell type future\n",
+    "    # NORMALIZE!!!\n",
     "    cellchat <- createCellChat(object = data_input_map[[sample.name]], meta = meta_map[[sample.name]], \n",
     "                               group.by = 'cell_type')\n",
     "    cellchat@DB <- humandb # human organism\n",
