covid atlas cellchat analyses

--- a/cellchat_for_tensor/03_cellchat_preprocess_timing.ipynb
+++ b/cellchat_for_tensor/03_cellchat_preprocess_timing.ipynb
@@ -14,19 +14,17 @@
     "    library(Matrix)\n",
     "})\n",
     "options(stringsAsFactors = FALSE)\n",
-    "input_path = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/timing_inputs/'\n",
-    "# output_path = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/timing_inputs'\n",
-    "\n"
+    "input_path_timing = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/timing_inputs/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "adolescent-context",
    "metadata": {},
    "outputs": [],
    "source": [
-    "md.cell <- read.csv(paste0(input_path,'metadata_for_timing.csv'), row.names = 1)\n",
+    "md.cell <- read.csv(paste0(input_path_timing,'metadata_for_timing.csv'), row.names = 1)\n",
     "\n",
     "sample_names<-unique(md.cell$sampleID)\n",
     "sample_context_map<-list()\n",
@@ -35,16 +33,8 @@
     "    if (length(context) != 1){stop('Incorred sample to context mapping')}\n",
     "    sample_context_map[[sn]]<-context\n",
     "}\n",
-    "saveRDS(sample_context_map, paste0(input_path, 'sample_context_map.rds'))"
+    "saveRDS(sample_context_map, paste0(input_path_timing, 'sample_context_map.rds'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "rational-result",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
