--- a/cellchat_for_tensor/04_cellchat_timing.ipynb
+++ b/cellchat_for_tensor/04_cellchat_timing.ipynb
@@ -7,9 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#! /usr/bin/env Rscript\n",
     "'Time how long it takes to run cellchat given some samples\n",
     "Usage:\n",
-    "    Rscript 04_cellchat_timing.r --number=<int> --group=<bool> [--seed=<int>]\n",
+    "    04_cellchat_timing.r --number=<int> --group=<bool> [--seed=<int>]\n",
     "    \n",
     "Options:\n",
     "    -h --help  Show this screen.\n",
@@ -24,7 +25,16 @@
    "execution_count": 1,
    "id": "allied-disposal",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘docopt’ was built under R version 4.0.5”\n"
+     ]
+    }
+   ],
    "source": [
     "suppressPackageStartupMessages({\n",
     "    library(CellChat, quietly = T)\n",
@@ -54,8 +64,11 @@
     "    val = opts[[opt]]\n",
     "    if (!is.null(val)){\n",
     "        opts[[opt]] = as.numeric(val)\n",
-    "        }\n",
+    "        }}\n",
     "\n",
+    "number<-opts[['number']]\n",
+    "group<-opts[['group']]\n",
+    "seed<-opts[['seed']]\n",
     "set.seed(seed)"
    ]
   },
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "loaded-malpractice",
    "metadata": {},
    "outputs": [],
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "adjusted-rainbow",
    "metadata": {},
    "outputs": [],
@@ -126,16 +139,133 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "based-location",
+   "id": "corporate-favor",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#' Rank the similarity of the shared signaling pathways based on their joint manifold learning\n",
+    "#'\n",
+    "#' @param object CellChat object\n",
+    "#' @param slot.name the slot name of object that is used to compute centrality measures of signaling networks\n",
+    "#' @param type \"functional\",\"structural\"\n",
+    "#' @param comparison1 a numerical vector giving the datasets for comparison. This should be the same as `comparison` in `computeNetSimilarityPairwise`\n",
+    "#' @param comparison2 a numerical vector with two elements giving the datasets for comparison.\n",
+    "#'\n",
+    "#' If there are more than 2 datasets defined in `comparison1`, `comparison2` can be defined to indicate which two datasets used for computing the distance.\n",
+    "#' e.g., comparison2 = c(1,3) indicates the first and third datasets defined in `comparison1` will be used for comparison.\n",
+    "#' @import ggplot2\n",
+    "#' @importFrom methods slot\n",
+    "#' @return\n",
+    "#' @export\n",
+    "#'\n",
+    "#' @examples\n",
+    "rankSimilarity_ <- function(object, slot.name = \"netP\", type = c(\"functional\",\"structural\"), comparison1 = NULL,  \n",
+    "                           comparison2 = c(1,2)) {\n",
+    "  type <- match.arg(type)\n",
+    "\n",
+    "  if (is.null(comparison1)) {\n",
+    "    comparison1 <- 1:length(unique(object@meta$datasets))\n",
+    "  }\n",
+    "  comparison.name <- paste(comparison1, collapse = \"-\")\n",
+    "  cat(\"Compute the distance of signaling networks between datasets\", as.character(comparison1[comparison2]), '\\n')\n",
+    "  comparison2.name <- names(methods::slot(object, slot.name))[comparison1[comparison2]]\n",
+    "\n",
+    "  Y <- methods::slot(object, slot.name)$similarity[[type]]$dr[[comparison.name]]\n",
+    "  group <- sub(\".*--\", \"\", rownames(Y))\n",
+    "  data1 <- Y[group %in% comparison2.name[1], ]\n",
+    "  data2 <- Y[group %in% comparison2.name[2], ]\n",
+    "  rownames(data1) <- sub(\"--.*\", \"\", rownames(data1))\n",
+    "  rownames(data2) <- sub(\"--.*\", \"\", rownames(data2))\n",
+    "\n",
+    "  pathway.show = as.character(intersect(rownames(data1), rownames(data2)))\n",
+    "  data1 <- data1[pathway.show, ]\n",
+    "  data2 <- data2[pathway.show, ]\n",
+    "  euc.dist <- function(x1, x2) sqrt(sum((x1 - x2) ^ 2))\n",
+    "  dist <- NULL\n",
+    "  for(i in 1:nrow(data1)) dist[i] <- euc.dist(data1[i,],data2[i,])\n",
+    "  df <- data.frame(name = pathway.show, dist = dist, row.names = pathway.show)\n",
+    "  df <- df[order(df$dist), , drop = F]\n",
+    "  df$name <- factor(df$name, levels = as.character(df$name))\n",
+    "\n",
+    "  return(df)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "based-location",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Create a CellChat object from a data matrix\n",
+      "\n",
+      "Set cell identities for the new CellChat object\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono NK Plasma \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Create a CellChat object from a data matrix\n",
+      "\n",
+      "Set cell identities for the new CellChat object\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Macro Mega Mono Neu NK Plasma \n",
+      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Neu Plasma \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Create a CellChat object from a data matrix\n",
+      "\n",
+      "Set cell identities for the new CellChat object\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono Neu NK Plasma \n",
+      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Neu Plasma \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Merge the following slots: 'data.signaling','net', 'netP','meta', 'idents', 'var.features' , 'DB', and 'LR'.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# create cellchat object for each sample or sample.name\n",
     "covid.list<-list()\n",
     "for (sample.name in names(counts)){\n",
     "    # loop through each sample.name and create a cell type future\n",
     "    expr<-CellChat::normalizeData(counts[[sample.name]])\n",
-    "    cellchat<-createCellChat(object = as(expr, \"dgCMatrix\"), meta = md.cell[colnames(expr)], \n",
+    "    cellchat<-createCellChat(object = as(expr, \"dgCMatrix\"), meta = md.cell[colnames(expr),], \n",
     "                                   group.by = cell_grouper)\n",
     "    cellchat@DB <- humandb # human organism\n",
     "\n",
