store UMI counts as hdf5 files

--- a/cellchat_for_tensor/04_cellchat_timing.ipynb
+++ b/cellchat_for_tensor/04_cellchat_timing.ipynb
@@ -42,9 +42,11 @@
     "    library(RhpcBLASctl, quietly = T)\n",
     "    library(Matrix, quietly = T)\n",
     "    library(docopt, quietly = T)\n",
+    "    library(rhdf5, quietly = T)\n",
+    "    library(stringr, quietly = T)\n",
     "})\n",
     "options(stringsAsFactors = FALSE)\n",
-    "expression_data_path = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/umi_for_timing/'\n",
+    "# expression_data_path = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/umi_for_timing/'\n",
     "input_path = '/data2/hratch/immune_CCI/covid/covid_atlas/interim/timing_inputs/'\n",
     "\n",
     "RhpcBLASctl::blas_set_num_threads(1) # no multithreading\n",
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "loaded-malpractice",
    "metadata": {},
    "outputs": [],
@@ -106,20 +108,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "adjusted-rainbow",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # load the UMI counts\n",
+    "# if (!group){\n",
+    "#     counts<-lapply(setNames(sample.names, sample.names), function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))\n",
+    "# }else{ # group by context\n",
+    "#     by.context<-lapply(setNames(contexts, contexts), function(context) names(sample_context_map[sample.names][sample_context_map[sample.names] == context]))\n",
+    "    \n",
+    "#     group_by_context<-function(context){\n",
+    "#         sns<-by.context[[context]]       \n",
+    "#         counts<-lapply(sns, function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))    \n",
+    "#         counts<-do.call(cbind, counts)\n",
+    "#         return (counts)\n",
+    "#     }\n",
+    "#     counts<-lapply(setNames(contexts, contexts), function(context) group_by_context(context))                   \n",
+    "                    \n",
+    "# }\n",
+    "\n",
     "# load the UMI counts\n",
+    "read_sample_h5<-function(sn){\n",
+    "    counts<-h5read(paste0(input_path, 'umi_per_sample.h5'), sn)\n",
+    "    count<-counts[[4]]\n",
+    "    colnames(count)<-counts[[2]]\n",
+    "    rownames(count)<-sapply(counts[[1]], function(x) str_replace_all(x, '-', '.')) \n",
+    "    return(count)\n",
+    "}\n",
+    "\n",
+    "\n",
     "if (!group){\n",
-    "    counts<-lapply(setNames(sample.names, sample.names), function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))\n",
+    "    counts<-lapply(setNames(sample.names, sample.names), function(sn) read_sample_h5(sn))\n",
     "}else{ # group by context\n",
     "    by.context<-lapply(setNames(contexts, contexts), function(context) names(sample_context_map[sample.names][sample_context_map[sample.names] == context]))\n",
     "    \n",
     "    group_by_context<-function(context){\n",
     "        sns<-by.context[[context]]       \n",
-    "        counts<-lapply(sns, function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))    \n",
+    "        counts<-lapply(sns, function(sn) read_sample_h5(sn))    \n",
     "        counts<-do.call(cbind, counts)\n",
     "        return (counts)\n",
     "    }\n",
@@ -139,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-favor",
+   "id": "restricted-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
